# AraviaFintech

./: .env-copy  .gitignore  README.md  main.py  pyproject.toml
src/: main.py
src/apps/adapters/: __init__.py  client_base.py  ws_base.py
src/apps/adapters/binance/: binance_api.py  binance_ws.py
src/apps/services/: custom_logger.py  trade_handler.py
src/settings/: __init__.py  common.py
