[tool.poetry]
name = "araviafintech"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
dotenv = "^0.9.9"
websockets = "^15.0.1"
aiohttp = "^3.11.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
